--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -38,9 +38,10 @@ workflows:
         ignore_failure: true
       - name: Build AAB with Flutter
         script: |
+          MAJOR_VERSION="2.0"
           BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
           flutter build appbundle --release \
-            --build-name=1.1.$BUILD_NUMBER \
+            --build-name=$MAJOR_VERSION.$BUILD_NUMBER \
             --build-number=$BUILD_NUMBER
     artifacts:
       - build/**/outputs/**/*.aab
