path  corrected  in yaml

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -22,7 +22,7 @@ workflows:
           echo "flutter.sdk: $HOME/programs/flutter"
           echo "CM_BUILD_DIR: $CM_BUILD_DIR"
           MAJOR_VERSION="3.0"
-          BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$CM_PACKAGE_NAME" --tracks="$CM_GOOGLE_PLAY_TRACK") + 3))      
+          BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$CM_PACKAGE_NAME" --tracks="$CM_GOOGLE_PLAY_TRACK" --credentials="$CM_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS") + 3))      
           echo "Calculated BUILD_NUMBER: $BUILD_NUMBER"
           echo "MAJOR_VERSION: $MAJOR_VERSION"
 
@@ -42,7 +42,7 @@ workflows:
       - name: Build AAB with Flutter
         script: |
           MAJOR_VERSION="3.0"
-          BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$CM_PACKAGE_NAME" --tracks="$CM_GOOGLE_PLAY_TRACK") + 3))      
+          BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$CM_PACKAGE_NAME" --tracks="$CM_GOOGLE_PLAY_TRACK" --credentials="$CM_GCLOUD_SERVICE_ACCOUNT_CREDENTIALS") + 1))      
           echo "Calculated BUILD_NUMBER: $BUILD_NUMBER"
           flutter build appbundle --release \
             --build-name=$MAJOR_VERSION.$BUILD_NUMBER \
