--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.13
   flutter_screenutil: ^5.7.0
+  purchases_flutter: ^6.5.1
 
 dev_dependencies:
   hive_generator: ^2.0.0
